10 March 2009: Wouter
	- makedist -w strips out old rc.. and snapshot info from version.
	- setup.exe starts and stops unbound after install, before uninstall.

9 March 2009: Wouter
	- Nullsoft NSIS installer creation script.

5 March 2009: Wouter
	- fixup memory leak introduced on 18feb in mesh reentrant fix.

3 March 2009: Wouter
	- combined icon with 16x16(4) 32x32(4) 48x48(8) 64x64(8).
	- service works on xp/vista, no config necessary (using defaults).
	- windows registry settings.

2 March 2009: Wouter
	- fixup --export-symbols to be -export-symbls for libtool.
	  This should fix extraneous symbols exported from libunbound.
	  Thanks to Ondrej Sury and Robert Edmonds for finding it.
	- iana portlist updated.
	- document FAQ entry on stub/forward zones and default blocking.
	- fix asynclook test app for libunbound not exporting symbols.
	- service install and remove utils that work with vista UAC.
		
27 February 2009: Wouter
	- Fixup lexer, to not give warnings about fwrite. Appeared in
	  new lexer features.
	- makedistro functionality for mingw. Has RC support.
	- support spaces and backslashes in configured defaults paths.
	- register, deregister in service control manager.

25 February 2009: Wouter
	- windres usage for application resources.

24 February 2009: Wouter
	- isc moved their dlv key download location.
	- fixup warning on vista/mingw.
	- makedist -w for window zip distribution first version.

20 February 2009: Wouter
	- Fixup contrib/update-itar.sh, the exit codes 1 and 0 were swapped.
	  Nicer script layout.  Added url to site in -h output.

19 February 2009: Wouter
	- unbound-checkconf and unbound print warnings when trust anchors
	  have unsupported algorithms.
	- added contrib/update-itar.sh  This script is similar to
	  update-anchor.sh, and updates from the IANA ITAR repository.
	  You can provide your own PGP key and trust repo, or can use the
	  builtin.  The program uses wget and gpg to work.
	- iana portlist updated.